--- a/app/src/main/res/layout/collaborator_fragment_home.xml
+++ b/app/src/main/res/layout/collaborator_fragment_home.xml
@@ -24,21 +24,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sniglet"
             android:text="@string/hi"
             android:textColor="@color/black"
             android:layout_marginRight="20dp"
             android:textSize="48sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold" />
 
         <TextView
             android:id="@+id/hiCollaboratorUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sniglet"
             android:textColor="@color/black"
             android:textSize="38sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold"/>
 
     </LinearLayout>
 
@@ -48,6 +46,7 @@
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="Be the first one to benefit from our offers and experiences."
+        android:fontFamily="@font/magra"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +75,7 @@
         android:backgroundTint="#468C32"
         android:drawableLeft="@drawable/ic_plus"
         android:text="Add your advertisement!"
+        android:fontFamily="@font/magra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
