--- a/app/src/main/res/layout/route_cardview_in_all_routes.xml
+++ b/app/src/main/res/layout/route_cardview_in_all_routes.xml
@@ -29,17 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:fontFamily="casual"
             android:gravity="center_vertical"
             android:textSize="40sp"
-            android:textStyle="bold">
+            android:fontFamily="@font/magra_bold">
 
         </TextView>
-
-        <Spinner
-            android:id="@+id/spinnerroutedetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
