--- a/app/src/main/res/layout/verification_activity.xml
+++ b/app/src/main/res/layout/verification_activity.xml
@@ -11,6 +11,7 @@
         android:layout_height="91dp"
         android:backgroundTint="#48B6B0B0"
         android:text="Resend Code"
+        android:fontFamily="@font/magra"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +27,7 @@
         android:layout_height="77dp"
         android:backgroundTint="#04AF15"
         android:text="Verify"
+        android:fontFamily="@font/magra"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
