--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -15,6 +15,7 @@
         android:layout_height="64dp"
         android:gravity="center"
         android:text="@string/sendmailtitle"
+        android:fontFamily="@font/magra"
         android:textSize="18sp" />
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/emailto"
+        android:fontFamily="@font/magra"
         android:textColor="#000000"
         android:textSize="16sp" />
 
@@ -38,6 +40,7 @@
         android:longClickable="false"
         android:text="@string/supportemail"
         android:textColor="#000000"
+        android:fontFamily="@font/magra"
         android:textSize="16sp" />
 
     <TextView
@@ -45,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hint_subject"
+        android:fontFamily="@font/magra"
         android:textColor="#000000"
         android:textSize="16sp" />
 
@@ -55,7 +59,8 @@
         android:layout_marginBottom="20dp"
         android:hint="@string/hint_subject"
         android:inputType="textEmailAddress"
-        android:textSize="16sp"></EditText>
+        android:fontFamily="@font/magra"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/messagetitle"
@@ -63,6 +68,7 @@
         android:layout_height="wrap_content"
         android:text="@string/hint_message"
         android:textColor="#000000"
+        android:fontFamily="@font/magra"
         android:textSize="16sp" />
 
     <EditText
@@ -73,13 +79,14 @@
         android:gravity="top"
         android:hint="@string/hint_message"
         android:inputType="textEmailAddress"
-        android:textSize="16sp"></EditText>
+        android:textSize="16sp"/>
 
     <Button
         android:id="@+id/buttonsendmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/buttonsend" />
+        android:text="@string/buttonsend"
+        android:fontFamily="@font/magra" />
 
 
 </LinearLayout>
