--- a/app/src/main/res/layout/activity_fragment_faqs.xml
+++ b/app/src/main/res/layout/activity_fragment_faqs.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:text="@string/contactus"
         android:textAlignment="center"
+        android:fontFamily="@font/magra"
         android:textColor="#FF0000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
