--- a/app/src/main/res/layout/add_template.xml
+++ b/app/src/main/res/layout/add_template.xml
@@ -2,10 +2,12 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="150dp"
+    android:layout_width="164dp"
     android:layout_height="260dp"
     android:backgroundTint="#80A0FD"
     android:layout_marginBottom="20dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginLeft="5dp"
     app:cardCornerRadius="15dp">
 
 
@@ -22,7 +24,7 @@
             android:layout_weight="2"
             android:background="#FFFFFF"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold" />
 
         <ImageView
             android:id="@+id/adTemplatePicture"
@@ -36,7 +38,8 @@
             android:layout_height="0dp"
             android:layout_margin="5dp"
             android:layout_weight="4"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/magra"/>
 
         <TextView
             android:id="@+id/adTemplateDeadline"
@@ -46,7 +49,8 @@
             android:layout_weight="1"
             android:background="#FFFFFF"
             android:inputType="date"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:fontFamily="@font/magra"/>
 
 
     </LinearLayout>
