--- a/app/src/main/res/layout/collaborator_profile_fragment.xml
+++ b/app/src/main/res/layout/collaborator_profile_fragment.xml
@@ -31,7 +31,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="7"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:fontFamily="@font/magra_bold"/>
 
             <ImageButton
                 android:id="@+id/collaboratormenuProfile"
@@ -68,7 +68,8 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="55dp"
             android:backgroundTint="#4FBD5E"
-            android:text="Edit Profile" />
+            android:text="Edit Profile"
+            android:fontFamily="@font/magra"/>
 
 
         <Button
@@ -76,7 +77,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="IS SUBSCRIPTION ACTIVE?"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/magra"/>
 
 
     </LinearLayout>
