--- a/app/src/main/res/layout/dialog_discount_clicked.xml
+++ b/app/src/main/res/layout/dialog_discount_clicked.xml
@@ -15,6 +15,7 @@
         android:gravity="center_horizontal"
         android:layout_marginBottom="15dp"
         android:textSize="20sp"
+        android:fontFamily="@font/magra"
         android:textColor="@color/black"
         android:text="@string/discount_activation"/>
 
@@ -49,7 +50,8 @@
                 android:gravity="center"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:fontFamily="@font/magra"/>
 
             <ImageView
                 android:id="@+id/infodiscount"
@@ -71,6 +73,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#02882E"
         android:text="ACTIVAR"
+        android:fontFamily="@font/magra"
         android:textColor="#FFFFFF"
         app:iconTint="#F16C6C" />
 
@@ -83,6 +86,7 @@
         android:layout_marginBottom="30dp"
         android:backgroundTint="#DA4E4E"
         android:text="AHORA NO"
+        android:fontFamily="@font/magra"
         android:textColor="#FFFFFF" />
 
 
