--- a/app/src/main/res/layout/discount_comment.xml
+++ b/app/src/main/res/layout/discount_comment.xml
@@ -37,7 +37,7 @@
                 android:gravity="center_vertical"
                 android:text="Comments"
                 android:textSize="34sp"
-                android:textStyle="bold" />
+                android:fontFamily="@font/magra_bold"/>
 
         </LinearLayout>
 
@@ -73,6 +73,7 @@
                 android:gravity="start"
                 android:paddingLeft="10dp"
                 android:text="Post"
+                android:fontFamily="@font/magra"
                 android:textColor="#008EFF"
                 android:textSize="14sp" />
 
@@ -85,7 +86,8 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:fontFamily="@font/magra"/>
 
 
         </LinearLayout>
