--- a/app/src/main/res/layout/discount_info.xml
+++ b/app/src/main/res/layout/discount_info.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold"/>
 
         <TextView
             android:id="@+id/discount_info_description"
@@ -30,7 +30,8 @@
             android:layout_height="120dp"
             android:paddingLeft="10dp"
             android:layout_marginTop="10dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:fontFamily="@font/magra"/>
 
         <TextView
             android:id="@+id/discount_info_percentage"
@@ -39,7 +40,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:paddingLeft="10dp"
-            android:textStyle="bold"
+            android:fontFamily="@font/magra_bold"
             android:textSize="20sp"/>
 
 
