--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -59,8 +59,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="Nom usuari"
-            android:textColor="#000000"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold"
+            android:textColor="#000000"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:textSize="20sp"
+                android:fontFamily="@font/magra"
                 android:layout_weight="4" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -93,13 +94,14 @@
             android:layout_marginBottom="5dp"
             android:text="Email"
             android:textColor="#000000"
-            android:textStyle="bold" />
+            android:fontFamily="@font/magra_bold"/>
 
         <TextView
             android:id="@+id/editprofile_useremail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:fontFamily="@font/magra"
             android:layout_marginBottom="10dp"
             android:textColor="#BFBFBF" />
 
@@ -112,6 +114,7 @@
             android:layout_marginBottom="25dp"
             android:autoLink="none"
             android:text="Cambiar contrasenya"
+            android:fontFamily="@font/magra"
             android:textColor="#A80606"
             android:textStyle="italic" />
 
