--- a/app/src/main/res/layout/ended_sub_dialog.xml
+++ b/app/src/main/res/layout/ended_sub_dialog.xml
@@ -14,6 +14,7 @@
         android:text="Your subscription has ended. Please renew it to keep active as a collaborator. "
         android:textAlignment="center"
         android:textColor="#FFEB3B"
+        android:fontFamily="@font/magra"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:layout_marginBottom="376dp"
         android:backgroundTint="#FAF03E"
         android:text="@string/ok"
+        android:fontFamily="@font/magra"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
