--- a/app/src/main/res/layout/profile_menu_item.xml
+++ b/app/src/main/res/layout/profile_menu_item.xml
@@ -10,6 +10,7 @@
         android:layout_margin="15dp"
         android:textAlignment="center"
         android:textColor="#AB422222"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:fontFamily="@font/magra"/>
 
 </LinearLayout>
