--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -12,6 +12,7 @@
         android:background="#40C0F4B7"
         android:gravity="center"
         android:hint="@string/email"
+        android:fontFamily="@font/magra"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_width="200dp"
         android:layout_height="47dp"
         android:text="Send mail"
+        android:fontFamily="@font/magra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -40,6 +42,7 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
+        android:fontFamily="@font/magra"
         app:layout_constraintBottom_toTopOf="@+id/textviewResetPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
