--- a/app/src/main/res/layout/routes_all_fragment.xml
+++ b/app/src/main/res/layout/routes_all_fragment.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="59dp"
-            android:fontFamily="casual"
+            android:fontFamily="@font/magra"
             android:gravity="center"
             android:text="AVAILABLE ROUTES LIST"
             android:textAlignment="center"
