--- a/app/src/main/res/layout/singleframe.xml
+++ b/app/src/main/res/layout/singleframe.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:fontFamily="@font/magra"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
