--- a/app/src/main/res/layout/tarifflayout.xml
+++ b/app/src/main/res/layout/tarifflayout.xml
@@ -30,7 +30,8 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/white"
                 android:textSize="42sp"
-                android:textStyle="bold|italic" />
+                android:fontFamily="@font/magra_bold"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -47,7 +48,7 @@
                     android:textAlignment="textStart"
                     android:textColor="@color/white"
                     android:textSize="32sp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/magra_bold"/>
 
                 <TextView
                     android:id="@+id/tarifaCondicioDescripcio"
@@ -57,7 +58,7 @@
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/magra_bold"/>
 
             </LinearLayout>
 
