--- a/app/src/main/res/layout/route_cardview_in_all_routes.xml
+++ b/app/src/main/res/layout/route_cardview_in_all_routes.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="100dp"
     android:id="@+id/titleholderroutes"
-    android:layout_margin="8dp"
-    android:elevation="8dp"
-    app:cardCornerRadius="10dp">
+    android:layout_marginBottom="10dp"
+    app:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:padding="5dp">
 
         <ImageView
+            android:id="@+id/icon_route_available_routes"
             android:layout_width="40dp"
-            android:layout_height="41dp"
-            android:src="@drawable/ic_star">
+            android:layout_height="40dp">
 
         </ImageView>
 
