--- a/app/src/main/res/layout/routes_all_fragment.xml
+++ b/app/src/main/res/layout/routes_all_fragment.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:background="@drawable/wallpapaer"
-    tools:context="com.example.anna.MenuPrincipal.Routes.FragmentRoutes">
+    tools:context="com.example.anna.MenuPrincipal.Routes.FragmentRoutes"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,10 +15,9 @@
 
 
         <TextView
-            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:fontFamily="@font/magra"
+            android:layout_height="80dp"
+            android:fontFamily="@font/magra_bold"
             android:gravity="center"
             android:textColor="@color/black"
             android:text="@string/routeListTitle"
@@ -28,7 +28,8 @@
             android:id="@+id/routesAllRv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp">
+            android:paddingTop="15dp"
+            android:paddingBottom="10dp">
 
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
