--- a/app/src/main/res/layout/station_detail.xml
+++ b/app/src/main/res/layout/station_detail.xml
@@ -171,6 +171,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/stationdetailLocationLayoutClickable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
